--- a/AppCucinaProject/app/src/main/res/layout/content_home.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_home.xml
@@ -6,11 +6,44 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.studente.appcucinaproject.Home"
-    tools:showIn="@layout/app_bar_home">
+    tools:showIn="@layout/app_bar_home"
+    android:background="@color/colorAccent"
+    android:elevation="0dp">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageView2"
+        android:background="@drawable/food2"
+        android:layout_marginTop="62dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="App Cucina"
+        android:id="@+id/textView9"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:layout_below="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="&lt;&lt; Uno non può pensare bene, amare bene, dormire bene, se non ha mangiato bene >>                                  cit. Virginia Woolf"
+        android:id="@+id/textView10"
+        android:layout_marginTop="57dp"
+        android:layout_below="@+id/textView9"
+        android:textColor="#ffffff"
+        android:textStyle="bold|italic"
+        android:textAlignment="center"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Large"
+        android:singleLine="false"
+        android:typeface="normal" />
 </RelativeLayout>
