--- a/AppCucinaProject/app/src/main/res/layout/ricetta_act.xml
+++ b/AppCucinaProject/app/src/main/res/layout/ricetta_act.xml
@@ -3,22 +3,118 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:id="@+id/d_ricetta_image"
-        android:src="@drawable/ic_ricettario"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/d_ricetta_title"
-        android:text="Titolo Ricetta"
-        android:textSize="20dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+
+            <ImageView
+                android:layout_width="414dp"
+                android:layout_height="300dp"
+                android:id="@+id/d_ricetta_image"
+                android:src="@drawable/ic_ricettario"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_weight="0.26" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/d_ricetta_title"
+                android:text="Titolo Ricetta"
+                android:textSize="20dp"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="75dp">
+
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageButton2"
+                    android:background="@drawable/round_button"
+                    android:clickable="true"
+                    android:src="@android:drawable/btn_star_big_off"
+                    android:layout_alignTop="@+id/imageButton4"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginStart="25dp"
+                    android:tint="#ffffff" />
+
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageButton3"
+                    android:background="@drawable/round_button"
+                    android:textAlignment="center"
+                    android:backgroundTintMode="src_over"
+                    android:src="@drawable/ic_spesa"
+                    android:tint="#ffffff"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginStart="21dp"
+                    android:layout_alignTop="@+id/imageButton5"
+                    android:layout_toRightOf="@+id/imageButton4"
+                    android:layout_toEndOf="@+id/imageButton4" />
+
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageButton4"
+                    android:src="@drawable/ic_timer"
+                    android:background="@drawable/round_button"
+                    android:tint="#ffffff"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_alignTop="@+id/imageButton3"
+                    android:layout_toRightOf="@+id/imageButton2"
+                    android:layout_toEndOf="@+id/imageButton2" />
+
+                <ImageButton
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageButton5"
+                    android:src="@drawable/ic_menu"
+                    android:background="@drawable/round_button"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="25dp"
+                    android:layout_marginEnd="25dp"
+                    android:tint="#ffffff"
+                    android:layout_marginLeft="25dp" />
+
+            </RelativeLayout>
+
+            <Space android:layout_width="match_parent"
+                android:layout_height="10dp"/>
+
+
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tab_max_width">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/large_text"
+                    android:id="@+id/textView5" />
+
+            </android.support.v4.widget.NestedScrollView>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
