--- a/AppCucinaProject/app/src/main/res/menu/activity_calcola_teglia_drawer.xml
+++ b/AppCucinaProject/app/src/main/res/menu/activity_calcola_teglia_drawer.xml
@@ -11,9 +11,14 @@
             android:icon="@drawable/ic_ricettario"
             android:title="Ricettario" />
         <item
-            android:id="@+id/nav_ricerca"
-            android:icon="@drawable/ic_ricerca"
-            android:title="Ricerca Avanzata" />
+        android:id="@+id/nav_ricerca"
+        android:icon="@drawable/ic_ricerca"
+        android:title="Ricerca Avanzata" />
+
+        <item
+            android:id="@+id/nav_menu_del_giorno"
+            android:icon="@drawable/menu"
+            android:title="Menù del giorno" />
 
     </group>
 
