--- a/AppCucinaProject/app/src/main/res/menu/activity_menu_del_giorno_drawer.xml
+++ b/AppCucinaProject/app/src/main/res/menu/activity_menu_del_giorno_drawer.xml
@@ -17,7 +17,7 @@
 
         <item
             android:id="@+id/nav_menu_del_giorno"
-            android:icon="@drawable/ic_menu"
+            android:icon="@drawable/menu"
             android:title="Menù del giorno" />
 
     </group>
