--- a/AppCucinaProject/app/src/main/res/menu/activity_spesa_drawer.xml
+++ b/AppCucinaProject/app/src/main/res/menu/activity_spesa_drawer.xml
@@ -15,6 +15,11 @@
             android:icon="@drawable/ic_ricerca"
             android:title="Ricerca Avanzata" />
 
+        <item
+            android:id="@+id/nav_menu_del_giorno"
+            android:icon="@drawable/menu"
+            android:title="Menù del giorno" />
+
     </group>
 
     <item android:title="Tools">
