--- a/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
@@ -316,14 +316,16 @@
                             android:layout_alignParentStart="true" />
 
                         <Button
-                            style="?android:attr/buttonStyleSmall"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
                             android:text="Cerca"
                             android:id="@+id/buttonCerca"
-                            android:layout_marginTop="20dp"
-                            android:layout_alignRight="@id/seekBar2"
-                            android:layout_below="@id/seekBar2" />
+                            android:layout_marginTop="10dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_below="@id/seekBar2"
+                            android:background="@drawable/button_rect"
+                            android:textColor="#ffffff"
+                            android:textAlignment="center" />
 
                         <!--
                         <NumberPicker
