--- a/AppCucinaProject/app/src/main/res/layout/app_bar_ricettario.xml
+++ b/AppCucinaProject/app/src/main/res/layout/app_bar_ricettario.xml
@@ -24,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            android:background="?attr/colorPrimaryDark"/>
 
     </android.support.design.widget.AppBarLayout>
 
