--- a/AppCucinaProject/app/src/main/res/drawable/button_rect.xml
+++ b/AppCucinaProject/app/src/main/res/drawable/button_rect.xml
@@ -7,7 +7,7 @@
                 android:bottomLeftRadius="10dp"
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"/>
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
     <item android:state_pressed="true">
