--- a/AppCucinaProject/app/src/main/res/layout/app_bar_home.xml
+++ b/AppCucinaProject/app/src/main/res/layout/app_bar_home.xml
@@ -19,9 +19,26 @@
             android:background="?attr/colorPrimaryDark"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabsHome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            android:background="?attr/colorPrimaryDark"/>
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_home" />
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpagerHome"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+
+    <include layout="@layout/content_ricettario" />
 
 
 
