--- a/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_ricerca_av.xml
@@ -55,7 +55,7 @@
                             android:layout_below="@+id/editText"
                             android:layout_alignLeft="@+id/editText"
                             android:layout_alignStart="@+id/editText"
-                            android:layout_marginTop="4dp"
+                            android:layout_marginTop="10dp"
                             android:layout_alignRight="@+id/editText"
                             android:layout_alignEnd="@+id/editText"
                             android:hint="Ingrediente 1" />
@@ -99,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:text="Antipasto"
                             android:id="@+id/checkBox"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="15dp"
                             android:layout_below="@+id/editText4"
                             android:layout_alignLeft="@+id/editText4"
                             android:layout_alignStart="@+id/editText4"
@@ -169,6 +169,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignTop="@+id/textView5"
                             android:id="@+id/radioGroup"
+                            android:layout_marginTop="15dp"
                             android:layout_alignLeft="@+id/checkBox3"
                             android:layout_alignStart="@+id/checkBox3">
 
@@ -205,12 +206,23 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Tempo:"
+                            android:text="Tempo :"
                             android:id="@+id/textView6"
                             android:layout_below="@+id/radioGroup"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentStart="true"
-                            android:layout_marginTop="40dp" />
+                            android:layout_marginTop="30dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="[min]"
+                            android:id="@+id/textView8"
+                            android:layout_below="@+id/textView6"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true" />
+
 
                         <RelativeLayout
                             android:id="@+id/integer"
@@ -307,8 +319,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
                             android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Calorie:"
+                            android:text="Calorie : [kcal]"
                             android:id="@+id/textView7"
                             android:layout_alignBottom="@+id/seekBar2"
                             android:layout_toLeftOf="@+id/seekBar2"
@@ -320,7 +333,7 @@
                             android:layout_height="40dp"
                             android:text="Cerca"
                             android:id="@+id/buttonCerca"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="40dp"
                             android:layout_centerHorizontal="true"
                             android:layout_below="@id/seekBar2"
                             android:background="@drawable/button_rect"
