--- a/AppCucinaProject/app/src/main/res/layout/ricetta_act.xml
+++ b/AppCucinaProject/app/src/main/res/layout/ricetta_act.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -37,68 +40,7 @@
                 android:layout_marginBottom="10dp"
                 style="@style/Base.TextAppearance.AppCompat.Title" />
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_height="75dp">
 
-                <ImageButton
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/imageButton2"
-                    android:background="@drawable/round_button"
-                    android:clickable="true"
-                    android:src="@android:drawable/btn_star_big_off"
-                    android:layout_alignTop="@+id/imageButton4"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginStart="25dp"
-                    android:tint="#ffffff" />
-
-                <ImageButton
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/imageButton3"
-                    android:background="@drawable/round_button"
-                    android:textAlignment="center"
-                    android:backgroundTintMode="src_over"
-                    android:src="@drawable/ic_spesa"
-                    android:tint="#ffffff"
-                    android:layout_marginLeft="21dp"
-                    android:layout_marginStart="21dp"
-                    android:layout_alignTop="@+id/imageButton5"
-                    android:layout_toRightOf="@+id/imageButton4"
-                    android:layout_toEndOf="@+id/imageButton4" />
-
-                <ImageButton
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/imageButton4"
-                    android:src="@drawable/ic_timer"
-                    android:background="@drawable/round_button"
-                    android:tint="#ffffff"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_alignTop="@+id/imageButton3"
-                    android:layout_toRightOf="@+id/imageButton2"
-                    android:layout_toEndOf="@+id/imageButton2" />
-
-                <ImageButton
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:id="@+id/imageButton5"
-                    android:src="@drawable/ic_menu"
-                    android:background="@drawable/round_button"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="25dp"
-                    android:layout_marginEnd="25dp"
-                    android:tint="#ffffff"
-                    android:layout_marginLeft="25dp" />
-
-            </RelativeLayout>
 
 
             <RelativeLayout
@@ -239,9 +181,9 @@
                     android:layout_weight="0.94"
                     android:layout_marginLeft="10dp"/>
 
-
         </LinearLayout>
 
     </ScrollView>
 
-</LinearLayout>
+
+</RelativeLayout>
