--- a/AppCucinaProject/app/src/main/res/layout/content_ricetta.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_ricetta.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.studente.appcucinaproject.Ricetta.Ricetta"
+    tools:showIn="@layout/activity_ricetta">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -171,19 +177,18 @@
                 android:textSize="20sp" />
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="15dp"
-                    android:text="@string/large_text"
-                    android:textSize="20sp"
-                    android:id="@+id/textView5"
-                    android:layout_weight="0.94"
-                    android:layout_marginLeft="10dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:text="@string/large_text"
+                android:textSize="20sp"
+                android:id="@+id/textView5"
+                android:layout_weight="0.94"
+                android:layout_marginLeft="10dp"/>
 
         </LinearLayout>
 
     </ScrollView>
-
 
 </RelativeLayout>
