--- a/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
+++ b/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
@@ -31,9 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginLeft="11dp"
-        android:layout_marginRight="11dp"
+        android:layout_marginRight="2dp"
         fab:menu_animationDelayPerItem="55"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
@@ -69,7 +69,7 @@
             android:id="@+id/material_design_floating_action_menu_item1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@android:drawable/btn_star"
+            android:src="@drawable/white_star"
             fab:fab_label="Preferiti"
             fab:fab_size="mini"
             app:fab_colorNormal="@color/colorPrimary"
