--- a/AppCucinaProject/app/src/main/res/layout/content_ricetta.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_ricetta.xml
@@ -61,8 +61,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/nPersone"
                     android:src="@drawable/users"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -72,17 +72,28 @@
                     android:layout_below="@+id/nPersone"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/difficoltaRicetta"
+                    android:src="@drawable/difficolta"
+                    android:layout_below="@+id/tempoRicetta"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/calorie"
                     android:src="@drawable/calories"
-                    android:layout_below="@+id/tempoRicetta"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_below="@+id/difficoltaRicetta"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -90,8 +101,8 @@
                     android:id="@+id/portata"
                     android:src="@drawable/portata"
                     android:layout_below="@+id/calorie"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -99,8 +110,8 @@
                     android:id="@+id/ingredienti_img"
                     android:src="@drawable/ingredienti"
                     android:layout_below="@+id/portata"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -118,43 +129,62 @@
                     android:layout_height="wrap_content"
                     android:text="tempo impiegato"
                     android:id="@+id/textView12"
-                    android:layout_above="@+id/calorie"
-                    android:layout_alignLeft="@+id/textView11"
-                    android:layout_alignStart="@+id/textView11" />
+                    android:layout_alignBottom="@+id/tempoRicetta"
+                    android:layout_toRightOf="@+id/tempoRicetta"
+                    android:layout_toEndOf="@+id/tempoRicetta"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="difficoltà"
+                    android:id="@+id/textViewDifficolta"
+                    android:layout_alignBottom="@+id/difficoltaRicetta"
+                    android:layout_toRightOf="@+id/difficoltaRicetta"
+                    android:layout_toEndOf="@+id/difficoltaRicetta"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="calorie"
                     android:id="@+id/textView14"
-                    android:layout_above="@+id/portata"
-                    android:layout_alignLeft="@+id/textView12"
-                    android:layout_alignStart="@+id/textView12" />
+                    android:layout_alignBottom="@+id/calorie"
+                    android:layout_toRightOf="@+id/calorie"
+                    android:layout_toEndOf="@+id/calorie"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="portata"
                     android:id="@+id/textView15"
-                    android:layout_above="@+id/ingredienti_img"
-                    android:layout_alignLeft="@+id/textView12"
-                    android:layout_alignStart="@+id/textView12" />
-
+                    android:layout_alignBottom="@+id/portata"
+                    android:layout_toRightOf="@+id/portata"
+                    android:layout_toEndOf="@+id/portata"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
 
 
                 <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/textView15"
-                    android:layout_alignLeft="@+id/textView14"
-                    android:paddingTop="8dp">
+                    android:layout_alignBottom="@+id/ingredienti_img"
+                    android:layout_toRightOf="@+id/ingredienti_img"
+                    android:layout_toEndOf="@+id/ingredienti_img"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp">
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="100dp"
                         android:id="@+id/ID_ingredienti"
                         android:layout_alignLeft="@+id/textView12"
-                        android:text="Ingrediente 1"/>
+                        android:text="Ingrediente 1"
+                        android:maxLines="4"
+                        android:scrollbars="vertical"/>
 
                 </android.support.v4.widget.NestedScrollView>
 
