--- a/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
+++ b/AppCucinaProject/app/src/main/res/layout/activity_ricetta.xml
@@ -79,7 +79,7 @@
             android:id="@+id/material_design_floating_action_menu_item2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_spesa"
+            android:src="@drawable/ic_spesa2"
             fab:fab_label="Spesa"
             fab:fab_size="mini"
             app:fab_colorNormal="@color/colorPrimary"
@@ -90,7 +90,7 @@
             android:id="@+id/material_design_floating_action_menu_item3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/menu"
+            android:src="@drawable/menu2"
             fab:fab_label="MyMenu"
             fab:fab_size="mini"
             app:fab_colorNormal="@color/colorPrimary"
@@ -101,7 +101,7 @@
             android:id="@+id/material_design_floating_action_menu_item4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_timer"
+            android:src="@drawable/ic_timer2"
             fab:fab_label="Timer"
             fab:fab_size="mini"
             app:fab_colorNormal="@color/colorPrimary"
