cambio colore background ricettario

--- a/AppCucinaProject/app/src/main/res/layout/fragment_secondi.xml
+++ b/AppCucinaProject/app/src/main/res/layout/fragment_secondi.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.studente.appcucinaproject.Ricettario.tabs.AntipastiFragment">
+    tools:context="com.example.studente.appcucinaproject.Ricettario.tabs.AntipastiFragment"
+    android:background="@color/colorAccent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recview_secondi"
