Risoluzione bug visualizzazione ingredienti e aggiunta variabile "isPreferito" per futuro controllo se ricetta è preferito o meno

--- a/AppCucinaProject/app/src/main/res/layout/fragment_dolci.xml
+++ b/AppCucinaProject/app/src/main/res/layout/fragment_dolci.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.studente.appcucinaproject.Ricettario.tabs.AntipastiFragment"
-    android:background="@color/colorAccent">
+    tools:context="com.example.studente.appcucinaproject.Ricettario.tabs.AntipastiFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recview_dolci"
