--- a/AppCucinaProject/app/src/main/res/layout/content_spesa_details.xml
+++ b/AppCucinaProject/app/src/main/res/layout/content_spesa_details.xml
@@ -37,12 +37,14 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:text="New Text"
         android:id="@+id/textView8"
         android:layout_alignTop="@+id/view2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
